# Clouds

./: CMakeLists.txt  README.md
include/: camera.h  mesh.h  model.h  quad.h  settings.h  shader.h  texture.h
include/glad/: glad.h
shaders/: blinn.frag  cloud.frag  customcellnoise.frag  depth.frag  depth.vert  fBm.frag  fBm.vert  flat.frag  fog.frag  fog.vert  raymarch.frag  raymarch.vert  screen.frag  simplexnoise.frag  voronoinoise.frag
src/: glad.c  main.cpp
